lesson 7 - adds routerLinkActive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<header>
+<nav>
     <ul class="menu-list">
         <li class="menu-list-item">
-            <a routerLink="/customers">Home (customers list)</a>
+            <a routerLink="/customers" routerLinkActive="active">Home (customers list)</a>
         </li>
     </ul>
-</header>
+</nav>
 
 <main>
     <router-outlet></router-outlet>
