--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,11 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let customer of customers; let even = even; let odd = odd" class="row" [ngClass]="{ odd: odd, even: even }">
+        <tr *ngFor="let customer of customers; let even = even; let odd = odd" 
+            class="row"
+            [ngClass]="{ odd: odd, even: even }"
+            (click)="rowClick(customer)"
+        >
             <td>{{ customer.firstName }}</td>
             <td>{{ customer.lastName }}</td>
             <td>{{ customer.tel }}</td>
@@ -18,3 +22,7 @@
         </tr>
     </tbody>
   </table>
+
+  <p>
+      Selcted user: {{ selectedCustomer?.dateOfBirth }}
+  </p>
