--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,1 @@
-<p>Angular http client</p>
-
-<table *ngIf="customers.length > 0">
-    <thead>
-        <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Phone</th>
-            <th>Address</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let customer of customers; let even = even; let odd = odd" 
-            class="row"
-            [ngClass]="{ odd: odd, even: even }"
-            (click)="rowClick(customer)"
-        >
-            <td>{{ customer.firstName }}</td>
-            <td>{{ customer.lastName }}</td>
-            <td>{{ customer.tel }}</td>
-            <td>{{ customer.address }}</td>
-        </tr>
-    </tbody>
-  </table>
-
-  <p>
-      Selcted user: {{ selectedCustomer?.dateOfBirth }}
-  </p>
+<app-customer-details-list></app-customer-details-list>
