--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <ul class="menu-list">
         <li class="menu-list-item">
             <a routerLink="/customers" routerLinkActive="active">Home (customers list)</a>
+            <a routerLink="/contracts" routerLinkActive="active">Contracts list</a>
         </li>
     </ul>
 </nav>
