--- a/src/app/customers-list/customers-list.component.html
+++ b/src/app/customers-list/customers-list.component.html
@@ -5,6 +5,7 @@
             <th>Lastname</th>
             <th>Phone</th>
             <th>Address</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -13,6 +14,9 @@
             <td>{{ customer.lastName }}</td>
             <td>{{ customer.tel }}</td>
             <td>{{ customer.address }}</td>
+            <td>
+                <a [routerLink]="['/customers', customer.id]">See more</a>
+            </td>
         </tr>
     </tbody>
 </table>
