lesson-7 - new contract route

--- a/src/app/contract-list/contract-list.component.html
+++ b/src/app/contract-list/contract-list.component.html
@@ -3,12 +3,16 @@
         <tr>
             <th>Title</th>
             <th>Cost</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let contract of contracts; let even = even; let odd = odd" class="row" [ngClass]="{ odd: odd, even: even }">
             <td>{{ contract.title }}</td>
             <td>{{ contract.cost }}</td>
+            <td>
+                <a [routerLink]="['/contracts', contract.id]">See more</a>
+            </td>
         </tr>
     </tbody>
 </table>
