lesson-7 - customer resolver creation

--- a/src/app/customer-details/customer-details.component.html
+++ b/src/app/customer-details/customer-details.component.html
@@ -1,2 +1,2 @@
-<p>Details for Customer: {{ customerId }}</p>
+<p>Details for Customer: {{ customer?.id }}</p>
 <p>Date of Birth: {{ customer?.dateOfBirth }}</p>
