lesson-8 - extra guards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
         <li class="menu-list-item">
             <a routerLink="/customers" routerLinkActive="active">Home (customers list)</a>
             <a routerLink="/contracts" routerLinkActive="active">Contracts list</a>
+            <a *ngIf="isLogoutButtonVisible()" (click)="logout()">Logout</a>
         </li>
     </ul>
 </nav>
